# jack-o-scope

./: CMakeLists.txt  README.md  configure.sh  deploy.sh
model/: pumpkin v26.f3d
release/2023.1/: jack_o_scope.uf2  light-shield-wrap.stl  light-shield.stl  pumpkin.stl  stem.stl  top-ridge-large.stl  toptop-ridge-small.stl
src/: colors.c  colors.h  display_buffer.c  display_buffer.h  main.c  patterns_7.h
src/patterns/: _7.h
